--- a/dataPackages/manifests/os.mds.scaled.manifest.json
+++ b/dataPackages/manifests/os.mds.scaled.manifest.json
@@ -5,9 +5,10 @@
     "collections": [
       {
         "id": 1,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/",
         "file": "brca_mds_1_mds-oncoVogel274-cnv-mut01",
+        "source": ["cBio"],
         "process": [
           {
             "calculation": "mds",
@@ -24,9 +25,10 @@
       },
       {
         "id": 2,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/",
         "file": "brca_mds_2_mds-oncoVogel274-cnv-mut01",
+        "source": ["cBio", "ucsc"],
         "process": [
           {
             "calculation": "mds",
@@ -43,9 +45,10 @@
       },
       {
         "id": 3,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/",
         "file": "brca_mds_3_mds-oncoVogel274-cnv-mut01",
+        "source": ["ucsc", "cBio"],
         "process": [
           {
             "calculation": "mds",
@@ -62,9 +65,10 @@
       },
       {
         "id": 4,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/",
         "file": "brca_mds_4_mds-oncoVogel274-cnv-mut01",
+        "source": ["ucsc"],
         "process": [
           {
             "calculation": "mds",
@@ -81,13 +85,14 @@
       },
       {
         "id": 5,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/scaled/",
         "file": "brca_mds_5_scaled-1e+05-oncoVogel274",
+        "source": ["cBio"],
         "process": [
           {
             "calculation": "scaled",
-            "scaleFactor": 100000,
+            "input": 100000,
             "geneset": "oncoVogel274"
           }
         ],
@@ -95,13 +100,14 @@
       },
       {
         "id": 6,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/scaled/",
         "file": "brca_mds_6_scaled-1e+05-oncoVogel274",
+        "source": ["cBio", "ucsc"],
         "process": [
           {
             "calculation": "scaled",
-            "scaleFactor": 100000,
+            "input": 100000,
             "geneset": "oncoVogel274"
           }
         ],
@@ -109,13 +115,14 @@
       },
       {
         "id": 7,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/scaled/",
         "file": "brca_mds_7_scaled-1e+05-oncoVogel274",
+        "source": ["ucsc", "cBio"],
         "process": [
           {
             "calculation": "scaled",
-            "scaleFactor": 100000,
+            "input": 100000,
             "geneset": "oncoVogel274"
           }
         ],
@@ -123,13 +130,14 @@
       },
       {
         "id": 8,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/scaled/",
         "file": "brca_mds_8_scaled-1e+05-oncoVogel274",
+        "source": ["ucsc"],
         "process": [
           {
             "calculation": "scaled",
-            "scaleFactor": 100000,
+            "input": 100000,
             "geneset": "oncoVogel274"
           }
         ],
@@ -143,9 +151,10 @@
     "collections": [
       {
         "id": 1,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/",
         "file": "brca_pcaScores_1_prcomp-oncoVogel274-cnv",
+        "source": "cBio",
         "process": [
           {
             "calculation": "prcomp",
@@ -159,9 +168,10 @@
       },
       {
         "id": 2,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/",
         "file": "brca_pcaScores_2_prcomp-oncoVogel274-cnv",
+        "source": "ucsc",
         "process": [
           {
             "calculation": "prcomp",
@@ -175,9 +185,10 @@
       },
       {
         "id": 3,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/",
         "file": "brca_pcaScores_3_prcomp-oncoVogel274-mut01",
+        "source": "cBio",
         "process": [
           {
             "calculation": "prcomp",
@@ -191,9 +202,10 @@
       },
       {
         "id": 4,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/",
         "file": "brca_pcaScores_4_prcomp-oncoVogel274-mut01",
+        "source": "ucsc",
         "process": [
           {
             "calculation": "prcomp",
@@ -207,9 +219,10 @@
       },
       {
         "id": 5,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/",
         "file": "brca_pcaScores_5_prcomp-oncoVogel274-rna",
+        "source": "cBio",
         "process": [
           {
             "calculation": "prcomp",
@@ -223,9 +236,10 @@
       },
       {
         "id": 6,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/",
         "file": "brca_pcaScores_6_prcomp-oncoVogel274-rna",
+        "source": "cBio",
         "process": [
           {
             "calculation": "prcomp",
@@ -239,9 +253,10 @@
       },
       {
         "id": 7,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/",
         "file": "brca_pcaScores_7_prcomp-NA-rna",
+        "source": "cBio",
         "process": [
           {
             "calculation": "prcomp",
@@ -254,9 +269,10 @@
       },
       {
         "id": 8,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/",
         "file": "brca_pcaScores_8_prcomp-NA-rna",
+        "source": "cBio",
         "process": [
           {
             "calculation": "prcomp",
@@ -269,9 +285,10 @@
       },
       {
         "id": 9,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/",
         "file": "brca_pcaScores_9_prcomp-oncoVogel274-protein",
+        "source": "cBio",
         "process": [
           {
             "calculation": "prcomp",
@@ -285,9 +302,10 @@
       },
       {
         "id": 10,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/",
         "file": "brca_pcaScores_10_prcomp-NA-protein",
+        "source": "cBio",
         "process": [
           {
             "calculation": "prcomp",
@@ -306,9 +324,10 @@
     "collections": [
       {
         "id": 1,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/",
         "file": "brca_pcaLoadings_1_prcomp-oncoVogel274-cnv",
+        "source": "cBio",
         "process": [
           {
             "calculation": "prcomp",
@@ -322,9 +341,10 @@
       },
       {
         "id": 2,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/",
         "file": "brca_pcaLoadings_2_prcomp-oncoVogel274-cnv",
+        "source": "ucsc",
         "process": [
           {
             "calculation": "prcomp",
@@ -338,9 +358,10 @@
       },
       {
         "id": 3,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/",
         "file": "brca_pcaLoadings_3_prcomp-oncoVogel274-mut01",
+        "source": "cBio",
         "process": [
           {
             "calculation": "prcomp",
@@ -354,9 +375,10 @@
       },
       {
         "id": 4,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/",
         "file": "brca_pcaLoadings_4_prcomp-oncoVogel274-mut01",
+        "source": "ucsc",
         "process": [
           {
             "calculation": "prcomp",
@@ -370,9 +392,10 @@
       },
       {
         "id": 5,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/",
         "file": "brca_pcaLoadings_5_prcomp-oncoVogel274-rna",
+        "source": "cBio",
         "process": [
           {
             "calculation": "prcomp",
@@ -386,9 +409,10 @@
       },
       {
         "id": 6,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/",
         "file": "brca_pcaLoadings_6_prcomp-oncoVogel274-rna",
+        "source": "cBio",
         "process": [
           {
             "calculation": "prcomp",
@@ -402,9 +426,10 @@
       },
       {
         "id": 7,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/",
         "file": "brca_pcaLoadings_7_prcomp-NA-rna",
+        "source": "cBio",
         "process": [
           {
             "calculation": "prcomp",
@@ -417,9 +442,10 @@
       },
       {
         "id": 8,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/",
         "file": "brca_pcaLoadings_8_prcomp-NA-rna",
+        "source": "cBio",
         "process": [
           {
             "calculation": "prcomp",
@@ -432,9 +458,10 @@
       },
       {
         "id": 9,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/",
         "file": "brca_pcaLoadings_9_prcomp-oncoVogel274-protein",
+        "source": "cBio",
         "process": [
           {
             "calculation": "prcomp",
@@ -448,9 +475,10 @@
       },
       {
         "id": 10,
-        "date": "2016-07-13",
+        "date": "2016-07-14",
         "directory": "../data/molecular/mds/",
         "file": "brca_pcaLoadings_10_prcomp-NA-protein",
+        "source": "cBio",
         "process": [
           {
             "calculation": "prcomp",
