--- a/dataPackages/manifests/os.molecular.manifest.json
+++ b/dataPackages/manifests/os.molecular.manifest.json
@@ -1,15 +1,88 @@
 [
-  {
-    "dataset": "hg19",
-    "type": "genesets",
-	"process": "import",
-	"date": "2016-06-24",
-	"source": "hgnc",
-	"directory": "../archive/hg19/",
-	"file": "hg19_genesets_hgnc.json"
-  },
 {
-		"dataset": "brca",
+		"dataset": "brain",
+		"source": "ucsc",
+		"type": "cnv",		
+		"process": "gistic",
+		"date": "2015-02-24",
+		"directory": "../archive/UCSC/TCGA_BRAIN/",
+		"file": "mtx.ucsc.cnv.RData"
+	},
+	{	"dataset": "brain",
+		"source": "ucsc",
+		"type": "mut01",		
+		"process": "import",
+		"date": "2015-02-24",
+		"directory": "../archive/UCSC/TCGA_BRAIN/",
+		"file": "mtx.ucsc.mut01.RData"
+	},
+	{	
+	"dataset": "gbm",
+	"type": "cnv",
+	"source": "ucsc",
+	"process": "gistic2thd",
+	"date": "2015-02-24",
+	"directory": "../archive/UCSC/",
+	"file": "TCGA_GBM_gistic2thd-2015-02-24/genomicMatrix"
+ 	},	{
+ 	"dataset": "gbm",
+	"source": "ucsc",
+	"type": "mut",
+	"process": "mutationBroadGene",
+	"date": "2015-02-24",
+	"directory": "../archive/UCSC/",
+	"file": "TCGA_GBM_mutation_broad_gene-2015-02-24/genomicMatrix"
+},
+{
+		"dataset": "brain",
+		"source": "cBio",
+		"type": "cnv",		
+		"process": "gistic",
+		"date": "2015-02-24",
+		"directory": "../archive/cBio/brain/",
+		"file": "mtx.cn.RData"
+	},
+	{	"dataset": "brain",
+		"source": "cBio",
+		"type": "mut",		
+		"process": "wxs",
+		"date": "2015-02-24",
+		"directory": "../archive/cBio/brain/",
+		"file": "mtx.mut.RData"
+	},
+	{	"dataset": "brain",
+		"source": "cBio",
+		"type": "methylation",		
+		"process": "HM27",
+		"date": "2015-02-24",
+		"directory": "../archive/cBio/brain/",
+		"file": "mtx.meth.RData"
+	},
+	{	"dataset": "brain",
+		"source": "cBio",
+		"type": "rna",		
+		"process": "RNAseq-bc",
+		"date": "2015-02-24",
+		"directory": "../archive/cBio/brain/",
+		"file": "mtx.mrna.bc.RData"
+	},
+	{	"dataset": "brain",
+		"source": "cBio",
+		"type": "protein",
+		"process": "RPPA-zscore",
+		"date": "2015-02-24",
+		"directory": "../archive/cBio/brain/",
+		"file": "mtx.prot.RData"
+	}, {
+		"dataset": "hg19",
+		"type": "genesets",
+		"process": "import",
+		"date": "2016-06-24",
+		"source": "hgnc",
+		"directory": "../archive/hg19/",
+		"file": "hg19_genesets_hgnc.json"
+	},
+	{	"dataset": "brca",
 		"source": "cBio",
 		"type": "cnv",		
 		"process": "gistic",
